--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: 发布npm
+name: Node.js Package
 on:
   push:
     branches: [master]
@@ -15,8 +15,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: 依赖安装
         run: npm install
-      - name: 构建
-        run: npm run build
-      - run: cd ./dist && npm publish
+#       - name: 构建
+#         run: npm run build
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
